# LBM_3D_SCFT

./: .gitmodules  CMakeLists.txt  README.md  field_types.cpp  options.json  references.txt
LBM/headers/: LBM.hpp
LBM/source/: LBM.cpp
SCFT/: SCFT.cpp  SCFT.hpp  qDaggerPropagator.cpp  qDaggerPropagator.hpp  qPropagator.cpp  qPropagator.hpp  qStarPropagator.cpp  qStarPropagator.hpp
cmdline/: main.cpp
